--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
   "homepage": "https://github.com/tshelburne/knowitall-js",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "karma": "^0.12.16"
+    "karma": "^0.12.16",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
+    "karma-requirejs": "^0.2.2",
+    "karma-safari-launcher": "^0.1.1",
+    "requirejs": "^2.1.14"
   }
 }
